--- a/_site.yml
+++ b/_site.yml
@@ -1,11 +1,12 @@
 name: "262Blog"
-title: "Designing Economic Decisions"
+title: "Econ 262"
 description: |
-  Designing Economic Decisions
+  Spring 2021
 output_dir: "_site"
 theme: theme.css
 include: ["slides/"]
 navbar:
+  logo: images/pennlogo.png
   right:
     - text: "Home"
       href: index.html
