--- a/_site.yml
+++ b/_site.yml
@@ -12,4 +12,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - icon: fa fa-twitter
+      href: https://twitter.com/AmitEcon
+    - icon: fa fa-envelope
+      href: mailto:akgandhi@upenn.edu
 output: distill::distill_article
